--- a/style.css
+++ b/style.css
@@ -17,5 +17,12 @@
     #sign{
         padding-top: 40px;
     }
+    #poto{
+        background-color: black;
+        height: 700px;
+        margin: 45px;
+        padding: 45px;
+        padding-left: 100px;
+    }
 
    
