--- a/style.css
+++ b/style.css
@@ -26,5 +26,8 @@
     #butt{
         background-color: tomato;height:70px;width:250px;border-radius:0%;
     }
+    #crd{
+        text-align: center; width: 350px;border: none;
+    }
 
    
