--- a/staticHtmlRoute/views/shop.html
+++ b/staticHtmlRoute/views/shop.html
@@ -10,12 +10,12 @@
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
+        <div class="row">
+            <ul class="nav row" style="list-style-type: none;">
+                <li class="h4 nav-link"><a href="/">Shop</a></li>
+                <li class="h4 nav-link"><a href="/admin/add-product">Add Product</a></li>
             </ul>
-        </nav>
+        </div>
     </header>
 
     <main>
