--- a/controllerModel/views/add-product.ejs
+++ b/controllerModel/views/add-product.ejs
@@ -11,6 +11,12 @@
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
+                <label for="image">Image URL</label>
+                <input type="text" name="title" id="image">
+                <label for="price">Price</label>
+                <input type="number" name="title" id="price">
+                <label for="des">Description</label>
+                <textarea type="text"maxlength="500" name="title" id="des" style="height:80px;width:325px;"></textarea>
             </div>
 
             <button class="btn" type="submit">Add Product</button>
