--- a/implementEJS/views/add-product.ejs
+++ b/implementEJS/views/add-product.ejs
@@ -11,6 +11,12 @@
         <div class="form-control">
             <label for="title">Title</label>
             <input type="text" name="title" id="title">
+            <label for="title">Image URL</label>
+            <input type="text" name="title" id="title">
+            <label for="title">Price</label>
+            <input type="number" name="title" id="title">
+            <label for="title">Description</label>
+            <input type="text" name="title" id="title">
         </div>
 
         <button class="btn" type="submit">Add Product</button>
