--- a/Case Study FSD/PixoGram/views/includes/navigation.ejs
+++ b/Case Study FSD/PixoGram/views/includes/navigation.ejs
@@ -18,6 +18,6 @@ else {
     <h1>Account</h1>
     <div class="page-content">
         <a href="/users/login">Login</a>
-        <a href="/users/signup">Register</a>
+        <a href="/users/register">Register</a>
     </div>
 <%
