--- a/Case Study FSD/PixoGram/views/login.ejs
+++ b/Case Study FSD/PixoGram/views/login.ejs
@@ -22,11 +22,11 @@
             <div class="row text-center" style="padding:20px">
             <div class="col-12 h1 logo">Login</div>
             </div>
+            <% if (data.error) { %>
+                <%= data.error %>
+                <% } %>
             <div class="row text-center ">
-                <div class="col-3">
-                    <% if (data.error) { %>
-                    <%= data.error %>
-                    <% } %></div>
+                <div class="col-3"></div>
                 <div class="col-7">
                 <form id="form1" name="form1" method="POST" action='/users/login' class="text-left">
                     <div class="form-group">
