--- a/Case Study FSD/PixoGram/views/register.ejs
+++ b/Case Study FSD/PixoGram/views/register.ejs
@@ -30,6 +30,9 @@
                     <div class="row text-center" style="padding:20px">
                     <div class="col-12 h1 logo">Create Account</div>
                     </div>
+                    <% if (data.error) { %>
+                        <%= data.error %>
+                        <% } %>
                     <div class="row text-center ">
                         <div class="col-3"></div>
                         <div class="col-7">
