--- a/Case Study FSD/PixoGram/views/register.ejs
+++ b/Case Study FSD/PixoGram/views/register.ejs
@@ -20,11 +20,6 @@
 </head>
 <body class="container-fluid">
     <%- include('includes/header.ejs') %>
-    <div class="row">
-        <div class="col-md-4">
-            <%- include('includes/navigation.ejs') %>
-        </div>
-        <div class="col-md-6">
                <div id="pageContent" class="pageContent">
                     <div class="container ">
                     <div class="row text-center" style="padding:20px">
@@ -74,7 +69,7 @@
                                     <button type="reset" value="Reset" class="btn btm-lg btn-secondary"style="margin-right:30px;">Reset</button>
                                     <button type="submit"  class="btn btm-lg btn-secondary ">Submit</button>
                                 </div>
-                                <p>Already have an account? <a  routerLink="/login">login here</a></p>
+                                <p>Already have an account? <a  href="/users/login">login here</a></p>
                         </form>
                     </div>
                 </div>
