--- a/Case Study FSD/PixoGram/views/login.ejs
+++ b/Case Study FSD/PixoGram/views/login.ejs
@@ -6,7 +6,7 @@
             } catch(err)
             {
             }
-            alert("Inside");
+            //alert("Inside");
             //return false;
         }
     </script>
@@ -40,7 +40,7 @@
                         <label for="password"><span class="req">* </span> Password: </label>
                             <input required name="password" type="password" class="form-control inputpass" minlength="4" maxlength="16"  id="pass1" /> 
                      </div>
-                     <button type="submit" onclick="validate()" class="btn btm-lg btn-secondary ">Sign In</button>
+                     <button type="submit" onclick="validateDetails()" class="btn btm-lg btn-secondary ">Sign In</button>
                   <div class="etc-login-form">
                 <p>Do not have an account? <a href="/users/register">Sign Up</a></p>
                 </div>
