--- a/Case Study FSD/y/pixogram/pixogram/views/index.ejs
+++ b/Case Study FSD/y/pixogram/pixogram/views/index.ejs
@@ -2,7 +2,7 @@
 
   </head>
 <script type="text/javascript" src="/javascripts/common.js"></script>
-  <body class="container">
+  <body class="container-fluid">
   <%- include('includes/nav.ejs') %>
   <div class="containter-fuild" style="margin-top: 100px; margin-left: 30px;">
     <h1>Welcome to PixoGram :-)</h1>
