--- a/Case Study FSD/y/pixogram/pixogram/public/stylesheets/common.css
+++ b/Case Study FSD/y/pixogram/pixogram/public/stylesheets/common.css
@@ -1,24 +1,24 @@
-
-
-h1{
-
-    color: #770080;
-    font-family:Courier New
+.nav-item .dropdown-menu li a {
+    color: #343a40;
+    font-size:15px;
+    font-weight:bold;
 }
-
-h2{
-
-    color: red;
-    font-family:Courier New
+.dropdown-item:focus, .dropdown-item:hover {
+    background-color: #d3d3d3 !important;
 }
-b{
-
-
-    color: #770080;
-    font-family:Courier New
-
+.dropdown-item.active{
+    color: #fff;
+    background-color: grey;
 }
-.center {
-    margin-left: auto;
-    margin-right: auto;
+.navHeaderLine {
+    margin-left:-16px;
+    padding: 25px 10px;
 }
+.headerbar{
+    width:100%;
+    top: 0;}
+
+
+    .pageContent {
+        padding-top:35px;
+     }
