--- a/Case Study FSD/PixoGram/views/followers.ejs
+++ b/Case Study FSD/PixoGram/views/followers.ejs
@@ -1,26 +1,42 @@
 <%- include('includes/head.ejs') %>
+
+
 </head>
 <script src="/javascripts/common.js"></script>
 <body  class="container">
-<%- include('includes/header.ejs') %>
+<%- include('includes/nav.ejs') %>
 
-<% if (!!data.uer) { %>
+<% if (!!data.customer) { %>
     <% if (!!data.followers) { %>
+
     <% if (!!data.users) { %>
-        <% data.users.forEach(function(user) { %>
+        <% data.users.forEach(function(cust) { %>
     <div>
-        <img src="data:images/<%=user.profilepicture.contentType%>;base64,
-                     <%=user.profilepicyure.imgdata.toString('base64')%>" width="300" height="250">
+        <img src="data:image/<%=cust.profilepic.contentType%>;base64,
+                     <%=cust.profilepic.imgdata.toString('base64')%>" width="300" height="250">
         <div>
-            <p><%= user.firstname %></p>
-            <p><%= user.lastname %></p>
-            <button onClick="unFollow('<%= data.user_id %>','<%= user._id %>')" >UnFollow </button>
+            <p><%= cust.firstname %></p>
+            <p><%= cust.lastname %></p>
+
+
+            <button onClick="unFollow('<%= data.customer._id %>','<%= cust._id %>')" >UnFollow </button>
+
+
+
         </div>
     </div>
-    <% })}
-    } else {%>
-    <p>No Followers found</p>
-   <%}}
+    <% })
+    }
+    } else {
     %>
+
+    <p>No Followers found</p>
+<%}
+    }
+    %>
+
+
+
+
 </body>
 </html>
