--- a/Case Study FSD/PixoGram/views/index.ejs
+++ b/Case Study FSD/PixoGram/views/index.ejs
@@ -1,35 +1,49 @@
 <%- include('includes/head.ejs') %>
-</head>
+
+  </head>
 <script type="text/javascript" src="/javascripts/common.js"></script>
-  <body >
-  <%- include('includes/header.ejs') %>
+  <body class="container-fluid">
+  <%- include('includes/nav.ejs') %>
   <div class="containter-fuild" style="margin-top: 100px; margin-left: 30px;">
-  <h1>Welcome to PixoGram :-)</h1>
-  <h3>You can connect to people, Like Share Post !!!! </h3>
-  <h5>To create a new Account please click on Register and to Sign up please do click on Login.</h5>
-</div>
+    <h1>Welcome to PixoGram :-)</h1>
+    <h3>You can connect to people, Like Share Post !!!! </h3>
+  </div>
   <p><%= data.token %></p>
-  <% if (!!data.user) { %>
+  <% if (!!data.customer) { %>
   <div>
-      <img src="data:image/<%=data.user.profilepicture.contentType%>;base64,
-                     <%=data.user.profilepicture.imgdata.toString('base64')%>" width="300" height="250">
+      <img src="data:image/<%=data.customer.profilepic.contentType%>;base64,
+                     <%=data.customer.profilepic.imgdata.toString('base64')%>" width="300" height="250">
       <div>
-        <p><%= data.user.firstname %></p>
-        <p><%= data.user.lastname %></p>
+        <p><%= data.customer.firstname %></p>
+        <p><%= data.customer.lastname %></p>
 
 
 
 
-        <button onClick="getFollowers('<%=data.user._id%>')" >Get Followers </button>
-        <button onClick="deleteFollowers('<%=data.user._id%>')">Delete Followers </button>
+        <button onClick="getFollowers('<%=data.customer._id%>')" >Get Followers </button>
+
+        <button onClick="addFollowers('<%=data.customer._id%>','5f898bf42c310943f8f44e3f')" >Add Followers </button>
+        <!--<button onClick="getUsers()" >All Users </button>-->
+       <!-- <button onClick="addFollowers(<% if (data.token) { %>'jwt <%= data.token %>'<% }%>)">Add Followers </button>-->
+        <button onClick="deleteFollowers('<%=data.customer._id%>')">Delete Followers </button>
 
           <div>
               <p><b id='result'></b></p>
           </div>
+
+
       </div>
     </div>
+
   <%
   }
   %>
    </body>
+
+
+
+
+
+
+
 </html>
