--- a/Case Study FSD/PixoGram/views/newsfeed.ejs
+++ b/Case Study FSD/PixoGram/views/newsfeed.ejs
@@ -1,10 +1,22 @@
 <%- include('includes/head.ejs') %>
+
 </head>
 <script src="/javascripts/common.js"></script>
 <body class="container">
-<%- include('includes/header.ejs') %>
+<%- include('includes/nav.ejs') %>
+
     <div class="row">
+       
+
+        <div class="col-md-6">
+
+
     <h1>News feed Page</h1>
+
+
     </div>
+    </div>
+
+
 </body>
 </html>
