--- a/Case Study FSD/PixoGram/views/search.ejs
+++ b/Case Study FSD/PixoGram/views/search.ejs
@@ -1,10 +1,21 @@
 <%- include('includes/head.ejs') %>
+
+
 </head>
-<script src="/javascript/common.js"></script>
+<script src="/javascripts/common.js"></script>
 <body class="container">
-<%- include('includes/header.ejs') %>
+<%- include('includes/nav.ejs') %>
 <div class="row">
+
+
+    <div class="col-md-6">
+
+
         <h1>Search Page</h1>
+
+
+    </div>
 </div>
+
 </body>
 </html>
