--- a/Case Study FSD/PixoGram/views/singlemedia.ejs
+++ b/Case Study FSD/PixoGram/views/singlemedia.ejs
@@ -1,12 +1,18 @@
 <%- include('includes/head.ejs') %>
+
 </head>
-<script src="/javascript/common.js"></script>
+<script src="/javascripts/common.js"></script>
 <body class="container">
-<%- include('includes/header.ejs') %>
+<%- include('includes/nav.ejs') %>
+
 
 <div class="row">
-        <h1>Media</h1>
-        <form id="form1" name="form1" method ="POST" action="/media/add-media" >
+    
+
+    <div class="col-md-6">
+
+        <h1>New Media Page</h1>
+        <form id="form1" name="form1" method ="POST" action="/media/add-media" enctype="multipart/form-data">
             <div>
                 <table class="center">
                     <tr>
@@ -37,6 +43,7 @@
                         <td>
                             <div class="float-left"><label for="description">Description</label></div>
                             <div class="float-right">:</div>
+
                         </td>
                         <td>
                             <div class='container'>
@@ -60,6 +67,7 @@
                         <td>
                             <div class="float-left"><label for="effects">Effects</label></div>
                             <div class="float-right">:</div>
+
                         </td>
                         <td>
                             <div class='container'>
@@ -67,26 +75,47 @@
                             </div>
                         </td>
                     </tr>
+
                     <tr>
                         <td>
                             <div class="float-left"><label for="media">Media</label></div>
                             <div class="float-right">:</div>
+
                         </td>
                         <td>
                             <div class='container'>
                                 <input type="file" class="form-control" id="media" name="media" required="true" placeholder="Media"/>
                             </div>
+
+
                         </td>
                     </tr>
+
+
                     <tr>
                         <td colspan="2" align="center">
                             <button type="Submit" onclick="validateDetails()" class="btn btn-primary">Submit</button>
                             <button type="button" onclick="this.form.reset();" class="btn btn-secondary">Clear</button>
+
                         </td>
+
+                    </tr>
+
+
+
+
+
+
                     </tr>
                 </table>
+
+
+
             </div>
         </form>
     </div>
+
+
+
 </body>
 </html>
